force-app/main/default/objects/ISUSTRUCTURMAPPING__x/ISUSTRUCTURMAPPING__x.object-meta.xml
<CustomObject>
    <description>ISUSTRUCTURMAPPINGs</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>ISUSTRUCTURMAPPINGs</externalName>
    <label>ISUSTRUCTURMAPPING</label>
    <pluralLabel>ISUSTRUCTURMAPPINGs</pluralLabel>
</CustomObject>