force-app/main/default/objects/ISUSTRUCTURMAPPING__x/fields/MARKET__c.field-meta.xml
<CustomField>
    <fullName>MARKET__c</fullName>
    <description>MARKET</description>
    <externalDeveloperName>MARKET</externalDeveloperName>
    <label>MARKET</label>
    <length>8</length>
    <type>Text</type>
</CustomField>