force-app/main/default/objects/ISUSTRUCTURMAPPING__x/fields/SMEGMAPPID__c.field-meta.xml
<CustomField>
    <fullName>SMEGMAPPID__c</fullName>
    <description>SMEGMAPPID</description>
    <externalDeveloperName>SMEGMAPPID</externalDeveloperName>
    <label>SMEGMAPPID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>