force-app/main/default/objects/ISUSTRUCTURMAPPING__x/fields/SMEGROUPID__c.field-meta.xml
<CustomField>
    <fullName>SMEGROUPID__c</fullName>
    <description>SMEGROUPID</description>
    <externalDeveloperName>SMEGROUPID</externalDeveloperName>
    <label>SMEGROUPID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>