force-app/main/default/objects/ISUSTRUCTURMAPPING__x/fields/SMEGROUPMID__c.field-meta.xml
<CustomField>
    <fullName>SMEGROUPMID__c</fullName>
    <description>SMEGROUPMID</description>
    <externalDeveloperName>SMEGROUPMID</externalDeveloperName>
    <label>SMEGROUPMID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>