force-app/main/default/objects/ISUSTRUCTURMAPPING__x/fields/SMEGROUPNAME__c.field-meta.xml
<CustomField>
    <fullName>SMEGROUPNAME__c</fullName>
    <description>SMEGROUPNAME</description>
    <externalDeveloperName>SMEGROUPNAME</externalDeveloperName>
    <label>SMEGROUPNAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>